--- a/fw_web.html
+++ b/fw_web.html
@@ -137,7 +137,8 @@
                                 <li class="two-item">
                                     <a class="two-link">
                                         <img src="./img/icon_34.png" alt="1" class="two-img">
-                                        <dt>独特创意+科学艺术，打造精品网站</dt>
+                                        <dt>独特创意+科学艺术</dt>
+                                        <dt>打造精品网站</dt>
                                         <dd>网站的创意设计、布局设计、色彩处理、动画效果</dd>
                                     </a>
                                 </li>
@@ -151,8 +152,31 @@
                                 <li class="two-item">
                                     <a class="two-link">
                                         <img src="./img/icon_33.png" alt="3" class="two-img">
-                                        <dt>成熟产品+二次开发网站更稳定更安全</dt>
+                                        <dt>成熟产品+二次开发</dt>
+                                        <dt>网站更稳定更安全</dt>
                                         <dd>产品成熟、网站系统定制开发、多项自主知识产权</dd>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_38.png" alt="1" class="two-img">
+                                        <dt>熟练掌握第四代网站技术</dt>
+                                        <dd>多设备跨平台、自适应网页设、即时更新</dd>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_36.png" alt="2" class="two-img">
+                                        <dt>网站维护服务周到，后顾无忧</dt>
+                                        <dd>日常维护服务页面、功能及内容维护、网站安全维护、客户关系管理</dd>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_37.png" alt="3" class="two-img">
+                                        <dt>多年网站项目管理经验</dt>
+                                        <dt>99%成功率</dt>
+                                        <dd>互补协作、共享双赢、铸就了多个成功的项目案例</dd>
                                     </a>
                                 </li>
                             </ul>
@@ -164,33 +188,26 @@
                         <div class="con-title">
                             <div class="title-main">
                                 <img src="./img/img_2.png" alt="---" class="img-left">
-                                <h3 class="title-text">我们积累了各行业丰富的经验和案例</h3>
+                                <div class="title-box">
+                                    <h3 class="title-text">多种网站类型</h3>
+                                    <h3 class="title-text">您想要的我们都能做</h3>
+                                </div>
                                 <img src="./img/img_1.png" alt="---" class="img-right">
                             </div>
-                            <span class="title-des">优赞可为企业提供一体化APP解决方案，并注重技术成长和产品体验。通过成熟稳定的技术方式，帮助运营者覆盖更多用户场景，轻松应对包括营销、运维在内的多种技术挑战。促进有效流量的吸收和转换，展现品牌形象理念，满足企业管理、运营、营销等多样化诉求。</span>
-                            <span class="title-des">目前，优赞科技作为移动互联网领域提供一站式的多平台解决方案领导者，服务超过800位海内外客户，当中包括众多知名品牌、国际品牌。</span>
                         </div>
                         <div class="con-main">
                             <ul>
                                 <li class="thr-item">
-                                    <a class="thr-link">
-                                        <img src="./img/img_6.png" alt="混合开发">
-                                        <dt>牌猫</dt>
-                                        <dd>牌猫app是中国第一款牌友社交APP，是一种针对牌友的社交方式。寻找身边的在线牌友，还可以线上观看牌艺名师视频，线下预约并欣赏牌艺名师的牌技表演。</dd>
-                                    </a>
-                                </li>
-                                <li class="thr-item">
-                                    <a class="thr-link">
-                                        <img src="./img/img_7.png" alt="IOS开发">
-                                        <dt>海丰快贷</dt>
-                                        <dd>海丰快贷app是一款帮助用户快速贷款的软件，包含借款、还款、记录等服务模块，用户可以按需求自主选择借款金额，解决你的燃眉之需。</dd>
-                                    </a>
-                                </li>
-                                <li class="thr-item">
-                                    <a class="thr-link">
-                                        <img src="./img/img_8.png" alt="安卓开发">
-                                        <dt>奢站</dt>
-                                        <dd>奢站app是一款二手奢侈品购物应用，海量二手奢侈品在线预览，满足用户需求，并且用户也可以在平台发布闲置的奢侈品或在线售卖，方便实用。</dd>
+                                    <a href="#" class="thr-link">
+                                        <span class="thr-left">
+                                            <div class="thr-img" style="background-image:url(./img/img_13.png)"></div>
+                                        </span>
+                                        <span class="thr-right">
+                                            <h3 class="r-title">营销型网站</h3>
+                                            <div class="r-intro">以现代网络营销理念为核心，基于企业营销目标进行站点规划，具有良好搜索引擎表现和用户体验，完备的效果评估体系，能够有效利用多重手段获得商业机会，提高产品销售业绩和品牌知名度的企业网站。</div>
+                                            <div class="link-text">咨询更多 →</div>
+                                        </span>
+
                                     </a>
                                 </li>
                             </ul>
