--- a/fw_web.html
+++ b/fw_web.html
@@ -207,6 +207,30 @@
                                             <div class="r-intro">以现代网络营销理念为核心，基于企业营销目标进行站点规划，具有良好搜索引擎表现和用户体验，完备的效果评估体系，能够有效利用多重手段获得商业机会，提高产品销售业绩和品牌知名度的企业网站。</div>
                                             <div class="link-text">咨询更多 →</div>
                                         </span>
+                                    </a>
+                                </li>
+                                <li class="thr-item">
+                                    <a href="#" class="thr-link">
+                                        <span class="thr-left">
+                                            <div class="thr-img" style="background-image:url(./img/img_14.png)"></div>
+                                        </span>
+                                        <span class="thr-right">
+                                            <h3 class="r-title">品牌型网站</h3>
+                                            <div class="r-intro">阐述品牌故事，品牌的成长历程；传播品牌深刻而丰富的文化内涵，建立鲜明的品牌定位；提高品牌知名度，提炼品牌价值，加强品牌记忆度制造差异和与众不同；传递品牌价值。</div>
+                                            <div class="link-text">咨询更多 →</div>
+                                        </span>
+                                    </a>
+                                </li>
+                                <li class="thr-item">
+                                    <a href="#" class="thr-link">
+                                        <span class="thr-left">
+                                            <div class="thr-img" style="background-image:url(./img/img_15.png)"></div>
+                                        </span>
+                                        <span class="thr-right">
+                                            <h3 class="r-title">微网站</h3>
+                                            <div class="r-intro">为网站是一类针对移动互联网营销而开发的移动应用，其功能融合了微信公众账号搭建等依托微信平台宣传优势，提升企业展示形象，增加企业移动端的客户互动性，最终帮助企业实现移动互联网的宣传营销效果。</div>
+                                            <div class="link-text">咨询更多 →</div>
+                                        </span>
 
                                     </a>
                                 </li>
