--- a/fw_wechat.html
+++ b/fw_wechat.html
@@ -11,27 +11,27 @@
     ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/fw.css">
+    <link rel="stylesheet" href="./css/fw_wechat.css">
     <script src="./js/jquery-3.3.1.js"></script>
 
 </head>
 
 <body>
-    <div id="fw_wrp">
+    <div id="fw_wechat">
         <div class="fw-box">
             <header class="top-head">
                 <!-- 导航 -->
                 <div class="nav">
                     <div class="nav-box">
                         <div class="nav-left">
-                            <a href="#">
+                            <a href="./index.html">
                                 <img src="./img/logo.png" alt="有赞科技">
                             </a>
                         </div>
                         <div class="nav-right">
                             <ul class="nav-list">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">首页</a>
+                                    <a href="./index.html" class="nav-link">首页</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">案例</a>
@@ -59,7 +59,7 @@
                                     <a href="#" class="nav-link">行业新闻</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">关于我们</a>
+                                    <a href="./about_us.html" class="nav-link">关于我们</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">提交需求</a>
@@ -68,7 +68,6 @@
                             <ul class="nav-bar"></ul>
                         </div>
                     </div>
-
                 </div>
                 <!-- 服务与优势 banner -->
                 <div class="fw-banner">
@@ -91,78 +90,95 @@
                         <div class="con-title">
                             <div class="title-main">
                                 <img src="./img/img_2.png" alt="---" class="img-left">
-                                <h3 class="title-text">优赞科技为您提供的服务</h3>
+                                <h3 class="title-text">优赞在微信开发方面的发展</h3>
                                 <img src="./img/img_1.png" alt="---" class="img-right">
                             </div>
-                            <span class="title-des">一体化的互联网+技术解决方案，让您的项目快速启动、完美落地</span>
+                            <span class="title-des">微信是目前社会中最流行的交流工具，随时随地与人交谈，并且其朋友圈的分享让社会化关系代替了点对点的交互，这不仅是一种关系，更是影响力!更是控制力！在微信关系网的作用下微信的用户粘度将是无与伦比的，企业进行微信开发将会新收到更多的粉丝，开展新的销售渠道！</span>
+                            <span class="title-des">
+                                从优赞成立发展至今，凭借着丰富的产品功能、全新的产品设计、快速的产品创新、超出用户期待的产品价值，基于微信为企业提供开发、运营、培训、推广一体化解决方案，帮助企业实现线
+                                上线下互通（O2O），社会化客户关系管理（SCRM），移动电商（微小铺），轻应用（lightapp）WMAPP等多个层面的业务开发，积累了大量的微信开发经验以及案例，</span>
                         </div>
                         <div class="con-main">
                             <ul>
-                                <li class="one-main-item">
-                                    <a href="./fw_app.html" class="one-main-link">
-                                        <img src="./img/icon_1.png" alt="APP开发">
-                                    </a>
-                                    <dt>APP开发</dt>
-                                </li>
-                                <li class="one-main-item">
-                                    <a href="./fw_web.html" class="one-main-link">
-                                        <img src="./img/icon_2.png" alt="网站定制">
-                                    </a>
-                                    <dt>网站定制</dt>
-                                </li>
-                                <li class="one-main-item">
-                                    <a href="./fw_wechat.html" class="one-main-link">
-                                        <img src="./img/icon_3.png" alt="微信开发">
-                                    </a>
-                                    <dt>微信开发</dt>
-                                </li>
-                                <li class="one-main-item">
-                                    <a href="./fw_ui.html" class="one-main-link">
-                                        <img src="./img/icon_4.png" alt="UI设计">
-                                    </a>
-                                    <dt>UI设计</dt>
-                                </li>
-                                <li class="one-main-item">
-                                    <a href="./fw_game.html" class="one-main-link">
-                                        <img src="./img/icon_5.png" alt="H5游戏开发">
-                                    </a>
-                                    <dt>H5游戏开发</dt>
-                                </li>
-
                             </ul>
                         </div>
                     </div>
-
                 </div>
                 <div class="con-part-two">
                     <div class="part-box">
                         <div class="con-title">
                             <div class="title-main">
                                 <img src="./img/img_2.png" alt="---" class="img-left">
-                                <div class="title-box">
-                                    <h3 class="title-text">我们不仅重视工作的效率</h3>
-                                    <h3 class="title-text">更加重视产品的质量</h3>
-                                </div>
+                                <h3 class="title-text">为什么选择微信开发</h3>
                                 <img src="./img/img_1.png" alt="---" class="img-right">
                             </div>
-                            <span class="title-des">优赞科技为您提供1对1业务咨询，助您快速解决业务问题</span>
                         </div>
                         <div class="con-main">
                             <ul>
-                                <li class="two-main-item">
-                                    <img src="./img/icon_8.png" alt="实战派" class="two-img">
-                                    <dt>实战派</dt>
-                                    <dd>海量互联网产品全模式开发经验累积，从0到1产品整个生命周期全程服务</dd>
+                                <li class="two-item">
+                                    <a href="#" class="two-link">
+                                        <img src="./img/icon_42.png" alt="1" class="two-img">
+                                        <h1 class="two-title">移动互联网趋势</h1>
+                                        <div class="two-des">
+                                            移动互联网用户已超
+                                            传统互联网用户，
+                                            成为目前的主流
+                                        </div>
+                                    </a>
                                 </li>
-                                <li class="two-main-item">
-                                    <img src="./img/icon_7.png" alt="精品工程" class="two-img">
-                                    <dt>精品工程</dt>
-                                    <dd>专注于移动互联网领域，服务超过300位海内外客户百余项精品案例</dd>
+                                <li class="two-item">
+                                    <a href="#" class="two-link">
+                                        <img src="./img/icon_43.png" alt="1" class="two-img">
+                                        <h1 class="two-title">流量入口巨大</h1>
+                                        <div class="two-des">
+                                            微信日平均用户达7亿
+                                            用户基数大，活跃度
+                                            高
+                                        </div>
+                                    </a>
                                 </li>
-                                <li class="two-main-item">
-                                    <img src="./img/icon_6.png" alt="体验驱动创新" class="two-img">
-                                    <dt>体验驱动创新</dt>
-                                    <dd>寻找用户、商业和技术平衡点，实现用户与企业核心价值的匹配</dd>
+                                <li class="two-item">
+                                    <a href="#" class="two-link">
+                                        <img src="./img/icon_44.png" alt="1" class="two-img">
+                                        <h1 class="two-title">用户粘性强</h1>
+                                        <div class="two-des">
+                                            人人都在使用微信
+                                            其用户黏度没有任何
+                                            一个产品可以比拟
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a href="#" class="two-link">
+                                        <img src="./img/icon_45.png" alt="1" class="two-img">
+                                        <h1 class="two-title">差异化服务</h1>
+                                        <div class="two-des">
+                                            微信公众号开发定制
+                                            更有特色，更符合用
+                                            户需求
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a href="#" class="two-link">
+                                        <img src="./img/icon_46.png" alt="1" class="two-img">
+                                        <h1 class="two-title">高效CRM管理</h1>
+                                        <div class="two-des">
+                                            微信粉丝即用户，对用
+                                            户分类管理和营销
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a href="#" class="two-link">
+                                        <img src="./img/icon_47.png" alt="1" class="two-img">
+                                        <h1 class="two-title">低成本营销</h1>
+                                        <div class="two-des">
+                                            企业微信公众号是一次
+                                            性投资，终身可以使
+                                            用，物超所值
+                                        </div>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -173,33 +189,94 @@
                         <div class="con-title">
                             <div class="title-main">
                                 <img src="./img/img_2.png" alt="---" class="img-left">
-                                <h3 class="title-text">我们如何创造出一款产品</h3>
+                                <h3 class="title-text">优赞提供的微信开发服务</h3>
                                 <img src="./img/img_1.png" alt="---" class="img-right">
                             </div>
-                            <span class="title-des">4步服务流程，简单、快速、保质完成您的产品</span>
                         </div>
                         <div class="con-main">
-                            <div class="thr-left">
-                                <div class="thr-left-top">
-                                    <h4 class="thr-title">产品咨询</h4>
-                                    <dd class="dd-left">通过产品咨询，产品经理会为您梳理需求提供产品解决方案以及原型设计。</dd>
-                                </div>
-                                <div class="thr-left-bot">
-                                    <h4 class="thr-title">产品咨询</h4>
-                                    <dd class="dd-left">通过产品咨询，产品经理会为您梳理需求提供产品解决方案以及原型设计。</dd>
-                                </div>
+                            <ul>
+                                <li class="thr-item">
+                                    <a class="thr-link">
+                                        <img src="./img/icon_48.png" alt="服务号" class="thr-img">
+                                        <span class="right-text">
+                                            <dt>微信服务号</dt>
+                                            <dd class="line-ellipsis">微信服务号开发，定制个性化功能，可以和企业网站手机站、APP等连接，实现数据同步，提升企业的业务能力和用户管理能力，让营销变得更容易。</dd>
+                                        </span>
+                                    </a>
+                                </li>
+                                <li class="thr-item">
+                                    <a class="thr-link">
+                                        <img src="./img/icon_49.png" alt="订阅号" class="thr-img">
+                                        <span class="right-text">
+                                            <dt>微信订阅号</dt>
+                                            <dd class="line-ellipsis">微信订阅号开发能够帮助企业实现产品宣传，提供图 文、视频、音频传播方式，更好的与用户互动。</dd>
+                                        </span>
+                                    </a>
+                                </li>
+
+                                <li class="thr-item">
+                                    <a class="thr-link">
+                                        <img src="./img/icon_50.png" alt="企业号" class="thr-img">
+                                        <span class="right-text">
+                                            <dt>微信企业号</dt>
+                                            <dd class="line-ellipsis">微信企业号开发以企业需求为前提，帮助企业建立员工、上下游供应链与企业IT系统间的连接，实现生产
+                                                管理、协作、运营的移动化。 </dd>
+                                        </span>
+                                    </a>
+                                </li>
+                                <li class="thr-item">
+                                    <a class="thr-link">
+                                        <img src="./img/icon_51.png" alt="小程序" class="thr-img">
+                                        <span class="right-text">
+                                            <dt>微信小程序</dt>
+                                            <dd class="line-ellipsis">微信小程序是现在的风口，未来的趋势，所以为什么不去开发自己的小程序呢？艾艺为企业提供小程序定制开发服务，帮企业抢占先机。</dd>
+                                        </span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="con-part-four">
+                    <div class="part-box">
+                        <div class="con-title">
+                            <div class="title-main">
+                                <img src="./img/img_2.png" alt="---" class="img-left">
+                                <h3 class="title-text">优赞科技经典案例</h3>
+                                <img src="./img/img_1.png" alt="---" class="img-right">
                             </div>
-                            <img src="./img/img_3.png" alt="产品" class="thr-mid">
-                            <div class="thr-right">
-                                <div class="thr-right-top">
-                                    <h4 class="thr-title">UI设计</h4>
-                                    <dd class="dd-right">设计师根据产品特性和属性进行UI设计，提升产品体验。</dd>
-                                </div>
-                                <div class="thr-right-bot">
-                                    <h4 class="thr-title">测试上线</h4>
-                                    <dd class="dd-right">通过内部测试和第三方专业测试，及时发现修复BUG，顺利部署上线。</dd>
-                                </div>
-                            </div>
+                        </div>
+                        <div class="con-main">
+                            <ul>
+                                <li class="four-item">
+                                    <a class="four-link">
+                                            <div class="four-img" style="background-image:url(./img/img_16.png);" alt="案例"></div>
+                                        <dt>云笃笃</dt>
+                                        <dd class="text-ellipsis">笃天科技软件开发微信服务平台</dd>
+                                    </a>
+                                </li>
+                                <li class="four-item">
+                                    <a class="four-link">
+                                            <div class="four-img" style="background-image:url(./img/img_17.png);" alt="案例"></div>
+                                        <dt>黄山气象</dt>
+                                        <dd class="text-ellipsis">黄山气象局微信公众号</dd>
+                                    </a>
+                                </li>
+                                <li class="four-item">
+                                    <a class="four-link">
+                                        <div class="four-img" style="background-image:url(./img/img_18.png);" alt="案例"></div>
+                                        <dt>黄山法院</dt>
+                                        <dd class="text-ellipsis">黄山法院公众号法官在线模块</dd>
+                                    </a>
+                                </li>
+                                <li class="four-item">
+                                    <a class="four-link">
+                                            <div class="four-img" style="background-image:url(./img/img_19.png);" alt="案例"></div>
+                                        <dt>鹍远基因</dt>
+                                        <dd class="text-ellipsis">微信公众号基因检测预约平台</dd>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
