--- a/fw_game.html
+++ b/fw_game.html
@@ -11,27 +11,27 @@
     ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/fw.css">
+    <link rel="stylesheet" href="./css/fw_game.css">
     <script src="./js/jquery-3.3.1.js"></script>
 
 </head>
 
 <body>
-    <div id="fw_wrp">
+    <div id="fw_game">
         <div class="fw-box">
             <header class="top-head">
                 <!-- 导航 -->
                 <div class="nav">
                     <div class="nav-box">
                         <div class="nav-left">
-                            <a href="#">
+                            <a href="./index.html">
                                 <img src="./img/logo.png" alt="有赞科技">
                             </a>
                         </div>
                         <div class="nav-right">
                             <ul class="nav-list">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">首页</a>
+                                    <a href="./index.html" class="nav-link">首页</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">案例</a>
@@ -59,7 +59,7 @@
                                     <a href="#" class="nav-link">行业新闻</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">关于我们</a>
+                                    <a href="./about_us.html" class="nav-link">关于我们</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">提交需求</a>
@@ -68,7 +68,6 @@
                             <ul class="nav-bar"></ul>
                         </div>
                     </div>
-
                 </div>
                 <!-- 服务与优势 banner -->
                 <div class="fw-banner">
@@ -91,115 +90,110 @@
                         <div class="con-title">
                             <div class="title-main">
                                 <img src="./img/img_2.png" alt="---" class="img-left">
-                                <h3 class="title-text">优赞科技为您提供的服务</h3>
+                                <h3 class="title-text">关于H5小游戏的6大优势</h3>
                                 <img src="./img/img_1.png" alt="---" class="img-right">
                             </div>
-                            <span class="title-des">一体化的互联网+技术解决方案，让您的项目快速启动、完美落地</span>
                         </div>
                         <div class="con-main">
                             <ul>
-                                <li class="one-main-item">
-                                    <a href="./fw_app.html" class="one-main-link">
-                                        <img src="./img/icon_1.png" alt="APP开发">
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_16.png" alt="游戏" class="one-img">
+                                        <dt>下载和安装</dt>
+                                        <dd class="line-ellipsis">可直接在微信中打开操作，节省用户手机的空间、改善桌面视觉，提高用户碎片化时间的游戏体验。</dd>
                                     </a>
-                                    <dt>APP开发</dt>
                                 </li>
-                                <li class="one-main-item">
-                                    <a href="./fw_web.html" class="one-main-link">
-                                        <img src="./img/icon_2.png" alt="网站定制">
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_17.png" alt="游戏" class="one-img">
+                                        <dt>下载和安装</dt>
+                                        <dd class="line-ellipsis">可直接在微信中打开操作，节省用户手机的空间、改善桌面视觉，提高用户碎片化时间的游戏体验。</dd>
                                     </a>
-                                    <dt>网站定制</dt>
                                 </li>
-                                <li class="one-main-item">
-                                    <a href="./fw_wechat.html" class="one-main-link">
-                                        <img src="./img/icon_3.png" alt="微信开发">
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_18.png" alt="游戏" class="one-img">
+                                        <dt>下载和安装</dt>
+                                        <dd class="line-ellipsis">可直接在微信中打开操作，节省用户手机的空间、改善桌面视觉，提高用户碎片化时间的游戏体验。</dd>
                                     </a>
-                                    <dt>微信开发</dt>
                                 </li>
-                                <li class="one-main-item">
-                                    <a href="./fw_ui.html" class="one-main-link">
-                                        <img src="./img/icon_4.png" alt="UI设计">
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_19.png" alt="游戏" class="one-img">
+                                        <dt>下载和安装</dt>
+                                        <dd class="line-ellipsis">可直接在微信中打开操作，节省用户手机的空间、改善桌面视觉，提高用户碎片化时间的游戏体验。</dd>
                                     </a>
-                                    <dt>UI设计</dt>
                                 </li>
-                                <li class="one-main-item">
-                                    <a href="./fw_game.html" class="one-main-link">
-                                        <img src="./img/icon_5.png" alt="H5游戏开发">
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_20.png" alt="游戏" class="one-img">
+                                        <dt>下载和安装</dt>
+                                        <dd class="line-ellipsis">可直接在微信中打开操作，节省用户手机的空间、改善桌面视觉，提高用户碎片化时间的游戏体验。</dd>
                                     </a>
-                                    <dt>H5游戏开发</dt>
                                 </li>
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_21.png" alt="游戏" class="one-img">
+                                        <dt>下载和安装</dt>
+                                        <dd class="line-ellipsis">可直接在微信中打开操作，节省用户手机的空间、改善桌面视觉，提高用户碎片化时间的游戏体验。</dd>
 
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
-
                 </div>
                 <div class="con-part-two">
                     <div class="part-box">
                         <div class="con-title">
                             <div class="title-main">
                                 <img src="./img/img_2.png" alt="---" class="img-left">
-                                <div class="title-box">
-                                    <h3 class="title-text">我们不仅重视工作的效率</h3>
-                                    <h3 class="title-text">更加重视产品的质量</h3>
-                                </div>
+                                <h3 class="title-text">为什么选择优赞科技</h3>
                                 <img src="./img/img_1.png" alt="---" class="img-right">
                             </div>
-                            <span class="title-des">优赞科技为您提供1对1业务咨询，助您快速解决业务问题</span>
+                            <span class="title-des">引领H5游戏行业，打造游戏极致体验</span>
+                            <span class="title-des">
+                                优赞科技，我们以为企业打造H5生态营销解决方案为目的，以创意设计与技术的完美融合为理念，满足您全方位需求！洞察企业及品牌调性，构思策划，提供全面开发服务。团队一对一专人专案策划，高端设计风格，为您倾力打造最具人气与创意的高端H5游戏。在交付产品给用户验收前，有专业的测试团队，并且在产品运营期间，我们将提供优质的技术支持与客服服务，助力您省心、省力修复漏洞，完成版本迭代更新。</span>
                         </div>
                         <div class="con-main">
                             <ul>
-                                <li class="two-main-item">
-                                    <img src="./img/icon_8.png" alt="实战派" class="two-img">
-                                    <dt>实战派</dt>
-                                    <dd>海量互联网产品全模式开发经验累积，从0到1产品整个生命周期全程服务</dd>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_23.png">
+                                        <div class="two-right">
+                                            <dt>实力品牌后盾</dt>
+                                            <dd class="line-ellipsis">依托于优赞科技多年游戏开发运营经验，游戏覆盖区域广，行业服务全。</dd>
+                                        </div>
+                                    </a>
                                 </li>
-                                <li class="two-main-item">
-                                    <img src="./img/icon_7.png" alt="精品工程" class="two-img">
-                                    <dt>精品工程</dt>
-                                    <dd>专注于移动互联网领域，服务超过300位海内外客户百余项精品案例</dd>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_22.png">
+                                        <div class="two-right">
+                                            <dt>特色定制服务</dt>
+                                            <dd class="line-ellipsis">紧跟市场需求，为客户研发最具有商业价值的H5游戏。</dd>
+                                        </div>
+                                    </a>
                                 </li>
-                                <li class="two-main-item">
-                                    <img src="./img/icon_6.png" alt="体验驱动创新" class="two-img">
-                                    <dt>体验驱动创新</dt>
-                                    <dd>寻找用户、商业和技术平衡点，实现用户与企业核心价值的匹配</dd>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_25.png">
+                                        <div class="two-right">
+                                            <dt>高效推广模式</dt>
+                                            <dd class="line-ellipsis">实时跟进游戏访客信息及触发游戏，游戏实时推送系统，快如闪电。</dd>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_24.png">
+                                        <div class="two-right">
+                                            <dt>永久免费升级</dt>
+                                            <dd class="line-ellipsis">同一产品版本下所有程序永久免费升级，给您最优的保障，让运营和推广更舒心。</dd>
+                                        </div>
+                                    </a>
                                 </li>
                             </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="con-part-thr">
-                    <div class="part-box">
-                        <div class="con-title">
-                            <div class="title-main">
-                                <img src="./img/img_2.png" alt="---" class="img-left">
-                                <h3 class="title-text">我们如何创造出一款产品</h3>
-                                <img src="./img/img_1.png" alt="---" class="img-right">
-                            </div>
-                            <span class="title-des">4步服务流程，简单、快速、保质完成您的产品</span>
-                        </div>
-                        <div class="con-main">
-                            <div class="thr-left">
-                                <div class="thr-left-top">
-                                    <h4 class="thr-title">产品咨询</h4>
-                                    <dd class="dd-left">通过产品咨询，产品经理会为您梳理需求提供产品解决方案以及原型设计。</dd>
-                                </div>
-                                <div class="thr-left-bot">
-                                    <h4 class="thr-title">产品咨询</h4>
-                                    <dd class="dd-left">通过产品咨询，产品经理会为您梳理需求提供产品解决方案以及原型设计。</dd>
-                                </div>
-                            </div>
-                            <img src="./img/img_3.png" alt="产品" class="thr-mid">
-                            <div class="thr-right">
-                                <div class="thr-right-top">
-                                    <h4 class="thr-title">UI设计</h4>
-                                    <dd class="dd-right">设计师根据产品特性和属性进行UI设计，提升产品体验。</dd>
-                                </div>
-                                <div class="thr-right-bot">
-                                    <h4 class="thr-title">测试上线</h4>
-                                    <dd class="dd-right">通过内部测试和第三方专业测试，及时发现修复BUG，顺利部署上线。</dd>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
