--- a/fw_ui.html
+++ b/fw_ui.html
@@ -11,27 +11,27 @@
     ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/fw.css">
+    <link rel="stylesheet" href="./css/fw_ui.css">
     <script src="./js/jquery-3.3.1.js"></script>
 
 </head>
 
 <body>
-    <div id="fw_wrp">
+    <div id="fw_ui">
         <div class="fw-box">
             <header class="top-head">
                 <!-- 导航 -->
                 <div class="nav">
                     <div class="nav-box">
                         <div class="nav-left">
-                            <a href="#">
+                            <a href="./index.html">
                                 <img src="./img/logo.png" alt="有赞科技">
                             </a>
                         </div>
                         <div class="nav-right">
                             <ul class="nav-list">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">首页</a>
+                                    <a href="./index.html" class="nav-link">首页</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">案例</a>
@@ -59,7 +59,7 @@
                                     <a href="#" class="nav-link">行业新闻</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">关于我们</a>
+                                    <a href="./about_us.html" class="nav-link">关于我们</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">提交需求</a>
@@ -68,7 +68,6 @@
                             <ul class="nav-bar"></ul>
                         </div>
                     </div>
-
                 </div>
                 <!-- 服务与优势 banner -->
                 <div class="fw-banner">
@@ -91,115 +90,114 @@
                         <div class="con-title">
                             <div class="title-main">
                                 <img src="./img/img_2.png" alt="---" class="img-left">
-                                <h3 class="title-text">优赞科技为您提供的服务</h3>
-                                <img src="./img/img_1.png" alt="---" class="img-right">
-                            </div>
-                            <span class="title-des">一体化的互联网+技术解决方案，让您的项目快速启动、完美落地</span>
-                        </div>
-                        <div class="con-main">
-                            <ul>
-                                <li class="one-main-item">
-                                    <a href="./fw_app.html" class="one-main-link">
-                                        <img src="./img/icon_1.png" alt="APP开发">
-                                    </a>
-                                    <dt>APP开发</dt>
-                                </li>
-                                <li class="one-main-item">
-                                    <a href="./fw_web.html" class="one-main-link">
-                                        <img src="./img/icon_2.png" alt="网站定制">
-                                    </a>
-                                    <dt>网站定制</dt>
-                                </li>
-                                <li class="one-main-item">
-                                    <a href="./fw_wechat.html" class="one-main-link">
-                                        <img src="./img/icon_3.png" alt="微信开发">
-                                    </a>
-                                    <dt>微信开发</dt>
-                                </li>
-                                <li class="one-main-item">
-                                    <a href="./fw_ui.html" class="one-main-link">
-                                        <img src="./img/icon_4.png" alt="UI设计">
-                                    </a>
-                                    <dt>UI设计</dt>
-                                </li>
-                                <li class="one-main-item">
-                                    <a href="./fw_game.html" class="one-main-link">
-                                        <img src="./img/icon_5.png" alt="H5游戏开发">
-                                    </a>
-                                    <dt>H5游戏开发</dt>
-                                </li>
-
-                            </ul>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="con-part-two">
-                    <div class="part-box">
-                        <div class="con-title">
-                            <div class="title-main">
-                                <img src="./img/img_2.png" alt="---" class="img-left">
-                                <div class="title-box">
-                                    <h3 class="title-text">我们不仅重视工作的效率</h3>
-                                    <h3 class="title-text">更加重视产品的质量</h3>
-                                </div>
+                                <h3 class="title-text">我们提供的服务</h3>
                                 <img src="./img/img_1.png" alt="---" class="img-right">
                             </div>
                             <span class="title-des">优赞科技为您提供1对1业务咨询，助您快速解决业务问题</span>
                         </div>
                         <div class="con-main">
                             <ul>
-                                <li class="two-main-item">
-                                    <img src="./img/icon_8.png" alt="实战派" class="two-img">
-                                    <dt>实战派</dt>
-                                    <dd>海量互联网产品全模式开发经验累积，从0到1产品整个生命周期全程服务</dd>
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_26.png" alt="网页设计" class="one-img">
+                                        <dt>网页设计</dt>
+                                        <dd class="line-ellipsis">为品牌网站、购物商城、系统软件及Web 各类网络平台提供专业的设计服务</dd>
+                                    </a>
                                 </li>
-                                <li class="two-main-item">
-                                    <img src="./img/icon_7.png" alt="精品工程" class="two-img">
-                                    <dt>精品工程</dt>
-                                    <dd>专注于移动互联网领域，服务超过300位海内外客户百余项精品案例</dd>
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_27.png" alt="网页设计" class="one-img">
+                                        <dt>APP设计</dt>
+                                        <dd class="line-ellipsis">为企业提供移动端战略解决方案基于IOS、Android等操作系统建立界面交互及视觉设计</dd>
+                                    </a>
                                 </li>
-                                <li class="two-main-item">
-                                    <img src="./img/icon_6.png" alt="体验驱动创新" class="two-img">
-                                    <dt>体验驱动创新</dt>
-                                    <dd>寻找用户、商业和技术平衡点，实现用户与企业核心价值的匹配</dd>
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_28.png" alt="网页设计" class="one-img">
+                                        <dt>软件界面</dt>
+                                        <dd class="line-ellipsis">提供各类企业管理软件、电子触屏系统等产品视觉界面设计</dd>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <div class="con-part-thr">
+                <div class="con-part-two">
                     <div class="part-box">
                         <div class="con-title">
                             <div class="title-main">
                                 <img src="./img/img_2.png" alt="---" class="img-left">
-                                <h3 class="title-text">我们如何创造出一款产品</h3>
+                                <h3 class="title-text">设计流程</h3>
                                 <img src="./img/img_1.png" alt="---" class="img-right">
                             </div>
-                            <span class="title-des">4步服务流程，简单、快速、保质完成您的产品</span>
                         </div>
                         <div class="con-main">
-                            <div class="thr-left">
-                                <div class="thr-left-top">
-                                    <h4 class="thr-title">产品咨询</h4>
-                                    <dd class="dd-left">通过产品咨询，产品经理会为您梳理需求提供产品解决方案以及原型设计。</dd>
-                                </div>
-                                <div class="thr-left-bot">
-                                    <h4 class="thr-title">产品咨询</h4>
-                                    <dd class="dd-left">通过产品咨询，产品经理会为您梳理需求提供产品解决方案以及原型设计。</dd>
+                            <ul>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <div class="two-left">
+                                            <dt>
+                                                <img src="./img/icon_29.png">
+                                                <p>需求沟通</p>
+                                            </dt>
+                                            <dd class="line-ellipsis">我们所能做的就是把客户的需求变成可能存在的产品。为客户精准定位目标群体，实现高效转化</dd>
+                                            <span class="contact-link">联系我们 →</span>
+                                        </div>
+                                        <div class="two-right">
+                                            <img src="./img/img_10.png" alt="">
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <div class="two-right">
+                                            <img src="./img/img_9.png" alt="">
+                                        </div>
+                                        <div class="two-left">
+                                            <dt>
+                                                <img src="./img/icon_30.png">
+                                                <p>视觉创意</p>
+                                            </dt>
+                                            <dd class="line-ellipsis">设计师根据需求报告进行视觉设计，制定色彩和平面元素，确定结 构和布局规范，实现需求和创意的画面感。</dd>
+                                            <span class="contact-link">查看案例 →</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <div class="two-left">
+                                            <dt>
+                                                <img src="./img/icon_31.png">
+                                                <p>界面设计</p>
+                                            </dt>
+                                            <dd class="line-ellipsis">设计师视觉创意设计，对产品原型进行整体的视觉效果处理，并配合技术部门实现产品原型的出产，确保产品设计实际效果达到要求。</dd>
+                                            <span class="contact-link">提交需求 →</span>
+                                        </div>
+                                        <div class="two-right">
+                                            <img src="./img/img_11.png" alt="">
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="con-part-four">
+                    <div class="part-box">
+                        <div class="four-left">
+                            <div class="con-title">
+                                <div class="title-main">
+                                    <h3 class="title-text">精品案例</h3>
+                                    <img src="./img/img_1.png" alt="---" class="img-right">
                                 </div>
                             </div>
-                            <img src="./img/img_3.png" alt="产品" class="thr-mid">
-                            <div class="thr-right">
-                                <div class="thr-right-top">
-                                    <h4 class="thr-title">UI设计</h4>
-                                    <dd class="dd-right">设计师根据产品特性和属性进行UI设计，提升产品体验。</dd>
-                                </div>
-                                <div class="thr-right-bot">
-                                    <h4 class="thr-title">测试上线</h4>
-                                    <dd class="dd-right">通过内部测试和第三方专业测试，及时发现修复BUG，顺利部署上线。</dd>
-                                </div>
-                            </div>
+                            <div class="four-title">朵妍亿莎商城</div>
+                            <div class="four-des">朵妍亿莎是一款为用户提供朵妍亿莎产品购买的分销商城APP。
+                                详细内容可扫描下方小程序码进入优赞云查看。</div>
+                           <img class="four-code" src="./img/code.png" alt="二维码">
+                        </div>
+                        <div class="four-right">
+                            <div class="four-img" style="background-image: url()"></div>
                         </div>
                     </div>
                 </div>
