--- a/about_us.html
+++ b/about_us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="zh-cn">
 
 <head>
     <title>合肥app开发公司|合肥小游戏开发|合肥小程序开发|APP开发|合肥软件公司-安徽优赞科技有限公司</title>
@@ -10,20 +11,272 @@
     ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/swiper.min.css">
+    <link rel="stylesheet" href="./css/about_us.css">
     <script src="./js/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=GQ43migCZ8SSRpaTCv7N3UnP1y81HHZB"></script>
 
 </head>
 
 <body>
-
-
-
-    <!-- 轮播 -->
-    <script src="./js/swiper.min.js" type="javascript/text"></script>
+    <div id="aboutUs">
+        <div class="fw-box">
+            <header class="top-head">
+                <!-- 导航 -->
+                <div class="nav">
+                    <div class="nav-box">
+                        <div class="nav-left">
+                            <a href="./index.html">
+                                <img src="./img/logo.png" alt="有赞科技">
+                            </a>
+                        </div>
+                        <div class="nav-right">
+                            <ul class="nav-list">
+                                <li class="nav-item">
+                                    <a href="./index.html" class="nav-link">首页</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">案例</a>
+                                    <div class="nav-hid">
+                                        <ul class="hid-list">
+                                            <li class="hid-item">
+                                                <a href="./fw_app.html" class="hid-link">APP开发</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_web.html" class="hid-link">网站定制</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_wechat.html" class="hid-link">微信开发</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_ui.html" class="hid-link">UI设计</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_game.html" class="hid-link">H5游戏开发</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">行业新闻</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="./about_us.html" class="nav-link">关于我们</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">提交需求</a>
+                                </li>
+                            </ul>
+                            <ul class="nav-bar"></ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- 服务与优势 banner -->
+                <div class="fw-banner">
+                    <div class="s-con-banner">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide swiper-slide-active">
+                                <div class="banner-img" style="background-image:url(./img/we_banner.png);"></div>
+                            </div>
+                        </div>
+                        <!-- Add Pagination -->
+                        <div class="swiper-pagination swiper-pagination-bullets"></div>
+                        <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+                    </div>
+                </div>
+            </header>
+            <!-- 主要内容 -->
+            <section class="main-content">
+                <div class="con-part-one">
+                    <div class="part-box">
+                        <h3 class="one-title">
+                            安徽优赞科技有限公司
+                        </h3>
+                        <span class="one-text">
+                            成立于2014年，总部位于合肥，是国内领先的移动互联网解决方案服务商。致力于构建互联网+商业生态，尤其专注于移动互联
+                            网领域，提供APP、WAP、PC端多平台及微信公众号、小程序、小游戏解决方案。作为移动互联网领域提供一站式的多平台解决方
+                            案领导者，服务超过800位海内外客户，当中包括众多知名品牌、国际品牌。
+                        </span>
+                        <h3 class="one-title">
+                            我们的团队
+                        </h3>
+                        <span class="one-text">
+                            作为国内领先的移动互联网解决方案服务商。，我们的团队一直对颠覆国内移动应用开发，为企业用户提供更多元化、更富创造力的移动化解决方案抱有着极大的热情。
+                        </span>
+                        <span class="one-text">
+                            为此，我们提供良好且舒适的办公环境，优渥的员工福利待遇，吸引了许多经验丰富的技术成员，以及深耕移动互联多年的商务管理人
+                            士，并重金聘请技术大神坐镇各开发团队，带领团队专注打磨企业产品。
+                        </span>
+                        <span class="one-text">
+                            并且，我们极为重视团队协作氛围，通过丰富的团队建设活动，让团队成员之间的沟通更加透明高效、协作流畅。
+                        </span>
+                        <span class="one-text">
+                            此外，我们拥有着完善的员工培养计划，定期开展企业文化活动、对员工进行知识体系的深化培训、让每一位团队成员都能深挖自己的
+                            潜力，取长补短，极大发挥团队合作力量。
+                        </span>
+                        <span class="one-text">
+                            我们始终以技术为先，不断地锐意进取，创新优化，紧跟移动互联网商业发展趋势，臻化我们的企业云服务，带领更多企业简单、高效、
+                            成功地走好移动化转型道路。
+                        </span>
+                        <span class="one-text">
+                            我们要用技术实力宣告，用更少的时间、更少的人力、更完美的技术支撑、更富创意的解决方案，实现改变世界的产品！
+                        </span>
+                    </div>
+                </div>
+                <div class="con-part-two">
+                    <div class="part-box">
+                        <div class="con-title">
+                            <div class="title-main">
+                                <h3 class="title-text">办公环境</h3>
+                            </div>
+                        </div>
+                        <div class="con-main">
+                            <div class="two-img-show">
+                                <div class="two-img" style="background-image:url(./img/img_22.png)"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="con-part-thr">
+                    <div class="part-box">
+                        <div class="con-main">
+                            <div class="thr-left">
+                                <h3 class="thr-l-title">联系方式</h3>
+                                <ul>
+                                    <li>
+                                        <label for="email">服务邮箱：</label>
+                                        <p>416625434@qq.com </p>
+                                    </li>
+                                    <li>
+                                        <label for="email">联系电话：</label>   
+                                        <p>185-5550-5063/180-1088-2980</p>
+                                    </li>   
+                                    <li>
+                                        <label for="email">公司地址：</label>
+                                        <p>安徽省合肥市经开区锦绣大道68号清华启迪科技城</p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="thr-right">
+                                <div class="map-box" id="mapContainer"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-us">
+                    <div class="part-box">
+                        <h3 class="contact-title">
+                            <div class="title-zh">联系我们</div>
+                            <div class="title-en">CONTACT US</div>
+                        </h3>
+                        <div class="contact-des">马上提交需求，我们会在24小时内联系您，并提供产品咨询和项目报价！</div>
+                        <span class="submit-xuqiu">
+                            <a href="#" class="submit-link">提交需求</a>
+                        </span>
+                    </div>
+                </div>
+            </section>
+            <!-- footer -->
+            <footer class="footer">
+                <div class="part-box">
+                    <div class="col-one">
+                        <h1 class="title">相关链接</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">项目案例</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">关于我们</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">提交需求</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">加入我们</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-two">
+                        <h1 class="title">优赞服务</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="./fw_app.html" class="footer-link">APP开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_web.html" class="footer-link">网站定制</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_wechat.html" class="footer-link">微信开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_ui.html" class="footer-link">UI设计</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_game.html" class="footer-link">H5游戏开发</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-thr">
+                        <h1 class="title">行业新闻</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">APP开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">微信开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">UI设计</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">营销推广</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">常见问题</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-four">
+                        <h1 class="title">关于优赞</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">公司介绍</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">联系我们</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">团队服务</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">企业动态</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-five">
+                        <h1 class="title">联系我们</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a class="footer-link">187-5510-5171</a>
+                            </li>
+                            <li class="footer-item">
+                                <a class="footer-link">980086844@qq.com</a>
+                            </li>
+                            <li class="footer-item wechat">
+                                <a class="footer-link">公众号微信号</a>
+                                <img src="./img/code.png" alt="二维码">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </footer>
+        </div>
+    </div>
     <!-- 主入口 -->
-    <script src="./js/index.js" type="javascript/text"></script>
+    <script src="./js/index.js"></script>
+    <!-- 动画 -->
+    <script src="./js/animation.js"></script>
+    <!-- 百度地图 -->
+    <script src="./js/map_show.js"></script>
 
 </body>
 
